--- a/todo_list/base/templates/base/task_list.html
+++ b/todo_list/base/templates/base/task_list.html
@@ -7,7 +7,7 @@
 {% endif %}
 
 <hr>
-<h1> To Do List </h1>
+<h1> To Do List {{ color }} </h1>
 <a href="{% url 'task-create' %}"> Add Task</a>
 
 <table>
