fix button style

--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -26,7 +26,7 @@
             max-width: 550px;
             margin: auto;
             background-color: #fff;
-
+        
             -webkit-box-shadow: 2px 2px 13px -4px rgba(0,0,0,0.21);
             box-shadow: 2px 2px 13px -4px rgba(0,0,0,0.21);            
         }
@@ -110,6 +110,7 @@
         input[type = text],
         input[type = password],
         textarea {
+            margin-right: 10px;
             border: 1px solid #eb796f;
             border-radius: 5px;
             padding: 10px;
